Terraform/Task2/aws-nat.tf
#resource of elestic ip
resource "aws_eip" "eip" {
  domain = "vpc"
}

#resource of nat
resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.eip.id
  subnet_id     = aws_subnet.subnets["public-subnet"].id

  tags = {
    Name = var.nat-gw
  }
}
